--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.0",
     "morgan": "^1.10.0"
