--- a/part4/blog/package.json
+++ b/part4/blog/package.json
@@ -5,23 +5,22 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --runInBand",
     "lint": "eslint ."
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^5.12.0"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
-    "jest": "^26.6.3"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "transform": {}
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
   }
 }
