--- a/part9/FirstStepWithTS/package.json
+++ b/part9/FirstStepWithTS/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "calculateBmi": "ts-node bmiCalculator.ts"
+    "calculateBmi": "ts-node bmiCalculator.ts",
+    "calculateExercises": "ts-node exerciseCalculator.ts"
   },
   "devDependencies": {
     "ts-node": "^9.1.1",
